--- a/inst/NEWS
+++ b/inst/NEWS
@@ -161,8 +161,9 @@ o RELEASE 0.6.3
 - Updates in the CITATION file.  
 - Built and tested under R-devel (2015-11-04 r69597) and release update to GitHub.
 ---------------------------------------------------------------------------------
-Date   : 2015-11-16
+Date   : 2015-11-21
 o RELEASE 0.7.0
 - Initial release of branch #1 ("devel") to GitHub.
+- Changed real dataset #2 of lung cancer genomic data (miRNA) to inlude 5 additional clinical variables.
 ---------------------------------------------------------------------------------
 
